fix(report-pr-0.5c): propagate degradation warnings + EOF + required-param (Codex 019e2d54)
Codex post-impl review caught 1 Medium + 2 Low. All absorbed:

§Medium #1 — filter-values dropped X-Report-Degraded warnings
==============================================================
executeFilterValues returned bare List<Object>, so the controller
could not lift degradation warnings onto the X-Report-Degraded
header — breaking the warning-propagation contract /data and
/export honour.

Fix: new QueryEngine.FilterValuesResult(values, warnings) record.
executeFilterValues returns it carrying the built query's
warnings; the controller wires DegradationHeaders.of(result
.warnings()) onto the 200 response. New regression test
degradationWarningsPropagatedToHeader verifies a warning on the
result reaches X-Report-Degraded.

§Low #2 — FilterValuesResponseDto EOF double newline
=====================================================
git diff --check flagged a trailing blank line at EOF. Removed —
diff --check now clean.

§Low #3 — missing column param contract parity
================================================
@RequestParam String column (required) meant a missing column got
Spring's default missing-param 400, not the structured
INVALID_COLUMN envelope. Changed to required=false so a missing
column flows through the visible-column allowlist check and
returns the canonical INVALID_COLUMN code.

Tests: 798 PASS (was 797 + 1 new warning-propagation test). All
6 SqlBuilder + 7 controller filter-values cases green.

Codex review thread: 019e2d54 (REVISE → expected AGREE after absorb)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>